# watchmyaudio

./: Dockerfile  README.md  docker-compose.yml  docker-pro.yml  myconf.conf  }
admin/: .dockerignore  .env  .gitignore  Dockerfile  README.md  execute_seddings.py  gunicorn.conf.py  main.py  pyproject.toml
admin/migration/: env.py
admin/migration/versions/: 3fef1fb16690_start_database.py
admin/source/api/: __init__.py
admin/source/api/admin/: __init__.py
admin/source/api/admin/auth/: __init__.py  controller.py  dtos.py  service.py
admin/source/api/admin/client/: __init__.py  controller.py  depends.py  dtos.py  model.py  repository.py  repository_implementation.py  service.py  service_implementation.py
admin/source/api/admin/client_radio_station/: model.py
admin/source/api/admin/radio_station/: __init__.py  controller.py  depends.py  dtos.py  model.py  repository.py  repository_implementation.py  service.py  service_implementation.py
admin/source/api/admin/user/: __init__.py  controller.py  depends.py  dtos.py  model.py  repository.py  repository_implementation.py  service.py  service_implementation.py
admin/source/api/public/: __init__.py
admin/source/api/public/advertisement/: __init__.py  controller.py  depends.py  dtos.py  local_saver.py  model.py  processers.py  repository.py  (+5 more)
admin/source/dependencies/: session.py
admin/source/sedding/: __init__.py  admin.py
admin/source/setting/: __init__.py
admin/source/utils/: base_repository.py  custom_base_model.py  database_helpers.py  password.py  scheduler.py  timezone_utlis.py  token.py
(+100 files in other folders)
