[project]
name = "admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi[standard]>=0.115.6",
    "ffmpeg-python>=0.2.0",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.5",
    "librosa>=0.10.2.post1",
    "numpy==2.0.2",
    "passlib>=1.7.4",
    "pydantic-extra-types>=2.10.2",
    "pydantic-settings>=2.7.1",
    "pyhumps>=3.8.0",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "python-socketio[asyncio,asyncio-client,client]>=5.12.1",
    "pytz>=2024.2",
    "reportlab>=4.2.5",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.22",
    "torch>=2.5.1",
    "transformers>=4.48.0",
    "tzdata>=2024.2",
    "uvicorn-worker>=0.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]
